api-gw/consul-api-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: api-gateway
  namespace: default
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-internal: "false" #new way
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing" #old way
spec:
  gatewayClassName: consul
  listeners:
  - protocol: HTTP
    port: 80
    name: http
    allowedRoutes:
      namespaces:
        from: Same
